# rust-agent

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  deploy.sh  test_architecture_simple
.agent/: memory.md  session.json  summary.md
.agent/skills/: add-git-tool.md  add-new-tool.md  browser-cdp-implementation.md  multi-agent.md  multi-edit-file-工具使用指南.md  read-ebook-files.md  sub-agent-调用逻辑.md  图片上传功能实现.md
.github/: copilot-instructions.md
docker/config/: mcp.toml
docs/: ASYNC_AGENT_DESIGN.md  HOOK_SYSTEM_DESIGN.md  MULTI_ROLE_DESIGN.md  NODES_DESIGN.md  PERSISTENT_AGENT_DESIGN.md  SANDBOX_ARCH.md  USER_GUIDE.md
sample-plugin/dev-cluster/: README.md  plugin.toml  workspaces.toml
sample-plugin/dev-cluster/hooks/: probe_on_start.toml
sample-plugin/dev-cluster/hooks/scripts/: probe_on_start.sh
sample-plugin/dev-cluster/mcp/: brave-search.toml  filesystem.toml  multi-server.toml
sample-plugin/dev-cluster/skills/: multi-node-guide.md
sample-plugin/dev-cluster/tools/: probe_nodes.json  probe_nodes.sh
sample-plugin/project-stats/: README.md  plugin.toml
sample-plugin/project-stats/hooks/: on_agent_start.toml  on_router_decision.toml  on_tool_after.toml
sample-plugin/project-stats/hooks/scripts/: on_agent_start.sh  on_router_decision.sh  on_tool_after.sh
sample-plugin/project-stats/skills/: git-workflow.md
sample-plugin/project-stats/tools/: git_log.json  git_log.sh  word_count.json  word_count.sh
sample/dev-cluster/: system_prompt.md
sample/project-stats/: system_prompt.md
src/: agent.rs  agent.rs.backup  cli.rs  commands.rs  config.rs  confirm.rs  container.rs  context.rs  conversation.rs  diff.rs  main.rs  mcp_client.rs  mcp_server.rs  memory.rs  memory_provider.rs  model_manager.rs  output.rs  path_manager.rs  persistence.rs  pipeline.rs  router.rs  sandbox.rs  server.rs  service.rs  skills.rs  streaming.rs  summary.rs  tui_app.rs  ui.rs  worker.rs  workspaces.rs
src/llm/: anthropic.rs  mod.rs  openai.rs
src/memory/: factory.rs  http.rs  intelligent.rs  mod.rs  provider.rs
src/memory/archive/: smart.rs  time.rs  timeline.rs
src/plugin/: cache.rs  hook_bus.rs  hook_loader.rs  loader.rs  manager.rs  metadata.rs  mod.rs  scope.rs  skill_loader.rs  tool_loader.rs
src/tools/: batch_read.rs  browser.rs  browser_legacy.rs  call_node.rs  call_sub_agent.rs  connect_service.rs  create_skill.rs  edit_file.rs  fetch_url.rs  git.rs  list_dir.rs  list_nodes.rs  list_services.rs  load_skill.rs  mod.rs  multi_edit_file.rs  query_service.rs  read_ebook.rs  read_file.rs  read_pdf.rs  run_command.rs  script_tool.rs  search.rs  spawn_sub_agent.rs  subscribe_service.rs  think.rs  todo.rs  upload_image.rs  write_file.rs
src/tools/browser/: browser_tool.rs  mod.rs  test.rs
src/tools/browser/batch/: dependency_manager.rs  mod.rs  operation_sequence.rs  result_aggregator.rs
src/tools/browser/client/: actions.rs  mod.rs  session.rs  session_manager.rs
src/tools/browser/config/: manager.rs  mod.rs  profile.rs
src/tools/browser/driver/: cdp_client.rs  chromium.rs  connection_pool.rs  mod.rs
src/tools/browser/error/: handler.rs  mod.rs  types.rs
src/tools/browser/protocol/: cdp.rs  messages.rs  mod.rs  serializer.rs
src/tools/browser/runtime/: manager.rs  mod.rs  state.rs
src/tools/browser/snapshot/: ai_snapshot.rs  aria_snapshot.rs  element_roles.rs  mod.rs
tauri-app/: README.md  build.sh  dev.sh  index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  App.tsx.backup  index.css
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/icons/: README.md
tauri-app/src-tauri/src/: main.rs
tauri-app/src/components/: ChatArea.tsx  ConfirmCard.tsx  ConnectModal.tsx  ConnectModal.tsx.backup  Header.tsx  InputArea.tsx  SandboxPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskPanel.tsx  TaskPanelList.tsx  ToolsPanel.tsx
tauri-app/src/hooks/: useWebSocket.ts
tauri-app/src/stores/: agentStore.ts  taskStore.ts
tauri-app/src/types/: agent.ts
tests/: plugin_system.rs
vscode-extension/: .vscodeignore  package-lock.json  package.json  rust-agent-0.1.0.vsix
vscode-extension/src/: chatView.ts  client.ts  extension.ts
web-ui/: DEPLOY.md  INSTALL.md  LOCAL_SERVICE.md  README.md  deploy.sh  install-service.ps1  install-service.sh  nginx.conf  package-lock.json  package.json  start-simple.sh  start-ui.bat  start-ui.sh  start.sh
web-ui/src/: App.tsx  index.css
web-ui/src/components/: ConnectModal.tsx  DiffViewer.tsx  Header.tsx  Header.tsx.backup  InputArea.tsx  MessageItem.tsx  NodesPanel.tsx  SessionsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  ToolCallCard.tsx
web-ui/src/hooks/: useAgentPool.ts  useWebSocket.ts
web-ui/src/stores/: agentStore.ts
web-ui/src/types/: agent.ts
web-ui/src/utils/: environment.ts  tauri-api.ts
