[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"
description = "A CLI coding agent powered by LLM, similar to Claude Code"
license = "MIT"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for LLM API (rustls = pure Rust TLS, no system OpenSSL dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI interface
clap = { version = "4", features = ["derive", "env"] }

# Terminal UI
colored = "2"

# Low-level Unix terminal control (termios save/restore)
libc = "0.2"

# Interactive line editor
rustyline = "14"

# Async streaming
tokio-stream = "0.1"
futures = { version = "0.3", features = ["thread-pool"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Lazy global initialization
once_cell = "1"

# Environment & config
dotenvy = "0.15"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for message IDs
uuid = { version = "1", features = ["v4"] }

# Regex for parsing
regex = "1"

# File watching / globbing
glob = "0.3"

# Syntax highlighting in terminal
syntect = "5"

# Markdown rendering in terminal
termimad = "0.30"

# Async trait support
async-trait = "0.1"

# URL parsing
url = "2"

# WebSocket server (for --mode server)
tokio-tungstenite = "0.24"

# Text diffing (used by sandbox to show overlay changes)
similar = "2"

# Base64 encoding for image upload
base64 = "0.21"

# Browser automation with CDP
chromiumoxide = "0.9.1"
chrono = "0.4.44"

# Graph algorithms for dependency management
petgraph = "0.6"

# Compression libraries
flate2 = "1.0"
brotli = "3.4"
lz4 = "1.24"
zstd = "0.13"

# Async utilities
futures-util = "0.3"

# Serialization formats
bson = "2.8"
ciborium = "0.2"
rmp-serde = "1.1"

# Testing utilities
tempfile = "3.10"
